// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {},
  "server": {
    "host": "xxx.xxx",
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "port": 8081,
  },
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {},
  "server": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "favicon": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "favicon": [
      "/https/www.foo.com/default.ico",
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 3`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "inject": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 4`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "inject": [
      "body",
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "meta": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "meta": [
      {
        "charset": {
          "charset": "UTF-8",
        },
      },
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "template": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "template": [
      "static/index.html",
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "templateParameters": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "templateParameters": [
      {
        "name": "jack",
      },
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "title": [Function],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {
    "title": [
      "Default",
      [Function],
    ],
  },
  "output": {},
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
  },
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "cssModules": {
      "auto": [Function],
    },
    "disableCssModuleExtension": true,
  },
  "server": {
    "host": undefined,
    "https": undefined,
    "port": undefined,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "inlineScripts": true,
  },
  "server": {},
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "progressBar": true,
  },
  "html": {},
  "output": {
    "inlineStyles": true,
  },
  "server": {},
}
`;
